Fixed overflow

--- a/main.css
+++ b/main.css
@@ -8,8 +8,8 @@
 }
 
 body,html {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 ul{
@@ -33,7 +33,7 @@ h1{
     padding: 10px 20px;
     border-radius: 50px;
     transition: 0.15s ease-in-out;
-    animation-delay: 1s;
+    animation-delay: 0.5s;
 }
 
 .button:hover{
@@ -96,7 +96,7 @@ h1{
 .text-home h1{
     font-size: 7em;
     padding-bottom: 0.2em;
-    animation-delay: 0.5s;
+    animation-delay: 0.25s;
 }
 
 .text-home p{
@@ -109,7 +109,7 @@ h1{
 }
 .text-home .padding{
     padding-right: 13em;
-    animation-delay: 2s;
+    animation-delay: 1.5s;
 }
 
 .text-home .indic{
@@ -298,12 +298,8 @@ footer p{
     .menu{
         display: none;
     }
-    .home {
-        width: 50vw;
-    }
     .text-home{
-        top: 10vh;
-        width: 100vw;
+        top: 20vh;
     }
     .text-home h1{
         font-size: 1.5em;
@@ -312,22 +308,21 @@ footer p{
     .text-home p{
         float: none;
         text-align: right;
-        width: 40vw;
+        width: 100%;
         font-size: 1em;
-        padding-left:11em; 
-    }
-
-    #about{
-        height:1300px;
+        padding-left:5em; 
     }
     
     .text-about p{
         padding: 2em;
     }
     
+    #about{
+        height:1300px;
+    }
+    
     .grid{
         display: grid;
-        grid-auto-flow: dense;
     }
     
     #skills{
