--- a/particles.css
+++ b/particles.css
@@ -8,9 +8,3 @@
   background-repeat: no-repeat;
 }
 
-#particles canvas{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
